k8s/alfheim-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alfheim-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alfheim-frontend
  template:
    metadata:
      name: alfheim-frontend
      labels:
        app: alfheim-frontend
    spec:
      containers:
        - name: alfheim
          image: gcr.io/alfheim-argus-269319/alfheim:2.1.8
          imagePullPolicy: IfNotPresent
          readinessProbe:
            timeoutSeconds: 30
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
