k8s/argus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: argus-svc
spec:
  type: NodePort
  clusterIP: 10.76.14.88
  selector:
    app: argus-backend
  ports:
    - port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: argus-file-svc
spec:
  type: NodePort
  selector:
    app: argus-backend
  ports:
    - port: 8001
      targetPort: 80
