k8s/myblog-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myblog-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: myblog-external
    networking.gke.io/managed-certificates: alfheim-crt
spec:
  backend:
    serviceName: alfheim-svc
    servicePort: 80
  rules:
    - http:
        paths:
          - path: /api/*
            backend:
              serviceName: argus-svc
              servicePort: 8000
          - path: /resrc/*
            backend:
              serviceName: argus-file-svc
              servicePort: 8001
